--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -56,9 +56,13 @@ html {
 .sidebar {
   text-align: center;
   padding: 2rem 1rem;
-  color: rgba(255,255,255,.5);
-  background-color: #202020;
+  background-color: #000;
 }
+
+.sidebar p {
+  color: rgba(255,255,255, 0.95);
+}
+
 @media (min-width: 48em) {
   .sidebar {
     position: fixed;
@@ -122,8 +126,8 @@ a.sidebar-nav-item:focus {
  */
 
 .content {
-  padding-top:    4rem;
-  padding-bottom: 4rem;
+  padding-top:    2rem;
+  padding-bottom: 2rem;
 }
 
 @media (min-width: 48em) {
