--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -91,7 +91,7 @@ h1 {
   font-size: 2rem;
 }
 h2 {
-  margin-top: 1rem;
+  margin-top: 1.5rem;
   font-size: 1.5rem;
 }
 h3 {
@@ -259,8 +259,9 @@ tbody tr:nth-child(odd) th {
  */
 
 .lead {
-  font-size: 1.25rem;
-  font-weight: 300;
+  font-size: 1.10rem;
+  font-weight: 100;
+  line-height: 1.25em;
 }
 
 
